--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3333
 CONNECTION_STRING = "mongodb+srv://aircnc:masterkey@cluster0-ybfll.mongodb.net/aircnc?retryWrites=true&w=majority"
-SECRET_KEY = your_jwt_secret_key
+SECRET_KEY_TOKEN = aircnc
